--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,10 @@ image:
 - Visual Studio 2017
 platform:
   - x64
+
+environment:
+  MSVC_DEFAULT_OPTIONS: ON
+  BOOST_ROOT: C:\Libraries\boost_1_63_0
 configuration:
   - Release
   - Debug
