--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,16 +3,13 @@ image:
 - Visual Studio 2017
 platform:
   - x64
-
-environment:
-  MSVC_DEFAULT_OPTIONS: ON
-  BOOST_ROOT: C:\Libraries\boost_1_63_0
 configuration:
   - Release
   - Debug
 install:
     - git submodule update --init --recursive
     - set QTDIR=C:\Qt\5.11\msvc2017_64
+    - set BOOST_ROOT=C:\Libraries\boost_1_67_0
     - set PATH=%PATH%;%QTDIR%\bin
 before_build:
     - cmake -G "Visual Studio 15 2017 Win64" .
