--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,6 +12,8 @@ install:
     - set BOOST_ROOT=C:\Libraries\boost_1_67_0
     - set PATH=%PATH%;%QTDIR%\bin
 before_build:
-    - cmake -G "Visual Studio 15 2017 Win64" .
+    - mkdir build
+    - cd build
+    - cmake -G "Visual Studio 15 2017 Win64" ..
 build:
-  project: $(APPVEYOR_BUILD_FOLDER)\$(APPVEYOR_PROJECT_NAME).sln
+  project: $(APPVEYOR_BUILD_FOLDER)\build\$(APPVEYOR_PROJECT_NAME).sln
