--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,4 +17,4 @@ before_build:
     - cmake -G "Visual Studio 15 2017 Win64" ..
     - dir
 build:
-  project: $(APPVEYOR_BUILD_FOLDER)\build\$(APPVEYOR_PROJECT_NAME).sln
+  project: $(APPVEYOR_BUILD_FOLDER)\build\vigcoin.sln
