use none submodule

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,6 +9,7 @@ configuration:
   # - Debug
 install:
     - git submodule update --init --recursive
+    - git clone https://github.com/vigcoin/coin.git cryptonote
     - cd cryptonote
     - git checkout 1a28f29d8651ab654c5586f3c80c6c94cc63167f
     - cd ..
