added force checkout

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,7 +16,7 @@ install:
 before_build:
     - git clone https://github.com/vigcoin/coin.git cryptonote
     - cd cryptonote
-    - git checkout 1a28f29d8651ab654c5586f3c80c6c94cc63167f
+    - git checkout -qf 1a28f29d8651ab654c5586f3c80c6c94cc63167f
     - cd ..
     - mkdir build
     - cd build
